--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -13,5 +13,5 @@
   height: 8px;
 }
 .scroll_container::-webkit-scrollbar-thumb {
-  background: #4C4CFF;
+  background: #8585AD;
 }
